Bug 1616527 - Stop asserting on device change event when the window has navigated away. r=jib

When a page navigates away for example after a refresh, the collection of MediaDevices instance can take several seconds. If MediaManager is alive and a device change event arrives in it, the active instance of MediaDevices will be notified. Currently, the notification assert-crash when the window is not valid anymore. However, this is a valid scenario and depends on the cycle collection timing so the assert can be removed and the notification event can abort early and do nothing.

Differential Revision: https://phabricator.services.mozilla.com/D63312